--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -1053,6 +1053,10 @@ video {
   animation: spin 1s linear infinite;
 }
 
+.cursor-not-allowed {
+  cursor: not-allowed;
+}
+
 .cursor-pointer {
   cursor: pointer;
 }
