new swatch image color to image

--- a/sections/featured-product-section-1.liquid
+++ b/sections/featured-product-section-1.liquid
@@ -26,6 +26,7 @@
 
           <div>
             <input
+              readonly
               type="number"
               name="id"
               value="{{ selected_variant.id }}">
